# axum-rest

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  TRACING_SETUP.md
.github/workflows/: action.yml  release.yml  test.yml
src/: lib.rs  main.rs
src/db/: db.rs
src/db/repositories/: post_repo.rs  user_repo.rs
src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs
src/helpers/: auth.rs  middleware.rs  mod.rs  resend.rs  response.rs  validation.rs
src/model/: model.rs
