[package]
name = "axum-rest"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 1


[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
mailchecker = "6.0.18"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
scalar_api_reference = { version = "0.1.0", features = ["axum"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
time = "0.3.36"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
resend-rs = "0.18.0"
rand = "0.9.2"
base64 = "0.22.1"
